Removed jibberish from end of file and double </body>-tags

--- a/nytt2000.htm
+++ b/nytt2000.htm
@@ -24,7 +24,7 @@ Trandal - Trandahl - Trandall">
    <title>TRANDALsPOSTen 2000</title>
  </head>
 
-<body bgcolor="#ffffff" text="#000000" link="#0000ee" vlink="#551a8b">
+    <body bgcolor="#ffffff" text="#000000" link="#0000ee" vlink="#551a8b">
 
 <!-- START COMMENT
 ========================
@@ -913,29 +913,6 @@ END OF COMMENTS -->
 <center><hr width="100%"></center>
 <p><br></p>
 
-</font></p></body>
-</body></html>
-side - To TRANDAL main page"
-hspace="0" vspace="0" border="0" height="22" width="75"> <i>Main page</i>
-
-
-<ce€   ƒ™  w  k ¯)   _i7q*`*`h   j  d`¤š¯ p 7n˜p`jqh p`ð  p`²z`x`p`j jð n`³_ip`²7_iö  èèî`  j¿i, 2 €   —   ÿÿŸ   ÿÿ¨   ÿÿ  ÿÿh  ÿÿ»  ÿÿ  ÿÿo  ÿÿ­  ÿÿ  ÿÿ{  ÿÿý  ÿÿ?  ÿÿ   ÿÿø  ÿÿu  ÿÿ½  ÿÿ  ÿÿ-  ÿÿ†  ÿÿ †  ä  ÿÿ  ÿÿ6  ÿÿo  ÿÿž  ÿÿ   ÿÿ¨  ÿÿð  ÿÿò  ÿÿ  ÿÿ   ÿÿi  ÿÿu  ÿÿ|  ÿÿ–  ÿÿ¨  ÿÿª  ÿÿ¾  ÿÿà  ÿÿó  ÿÿ ó  è  ÿÿò  ÿÿ2=""   ÿÿm=""   ÿÿo=""   ÿÿ›=""   ÿÿã=""   ÿÿí=""   ÿÿ="">
-  ÿÿ‰
-  ÿÿ
-  ÿÿ‘
-  ÿÿæ
-  ÿÿ1  ÿÿ7  ÿÿ9  ÿÿ“  ÿÿÞ  ÿÿä  ÿÿæ  ÿÿ æ  >  ÿÿ‰  ÿÿ  ÿÿ‘  ÿÿò  ÿÿ=
-  ÿÿC
-  ÿÿN
-  ÿÿb
-  ÿÿm
-  ÿÿo
-  ÿÿy
-  ÿÿ«
-  ÿÿö
-  ÿÿ  ÿÿ  ÿÿ
-  ÿÿK  ÿÿ—  ÿÿ¢  ÿÿ ¢  ¤  ÿÿ®  ÿÿÙ  ÿÿ  ÿÿ"  ÿÿ-  ÿÿ/  ÿÿ9  ÿÿ„  ÿÿÙ  ÿÿí  ÿÿø  ÿÿú  ÿÿ  ÿÿ!  ÿÿ;  ÿÿU  ÿÿo  ÿÿ‰  ÿÿ£  ÿÿ £  ½  ÿÿ×  ÿÿñ  ÿÿ  ÿÿ%  ÿÿ=  ÿÿC  ÿÿN  ÿÿP  ÿÿ€  ÿÿÐ  ÿÿ  ÿÿ:  ÿÿ<  ÿÿS  ÿÿU  ÿÿy  ÿÿƒ  ÿÿÉ  ÿÿ  ÿÿ   O  ÿÿ’  ÿÿÕ  ÿÿ"  ÿÿU  ÿÿ`  ÿÿ„  ÿÿŠ  ÿÿŒ  ÿÿ¤  ÿÿ¦  ÿÿ½  ÿÿ¿  ÿÿÓ  ÿÿî  ÿÿ  ÿÿ7  ÿÿv  ÿÿx  ÿÿ‚  ÿÿ ‚  ª  ÿÿ¿  ÿÿÚ  ÿÿ  ÿÿ#  ÿÿ;  ÿÿR  ÿÿ„  ÿÿ¹  ÿÿé  ÿÿø  ÿÿ   ÿÿ9  ÿÿT  ÿÿ_  ÿÿa  ÿÿg  ÿÿ‹  ÿÿ  ÿÿ’  ÿÿ ’  ©  ÿÿ´  ÿÿò  ÿÿ:  ÿÿ<  ÿÿg  ÿÿ²  ÿÿº  ÿÿ  ÿÿK  ÿÿƒ  ÿÿ¹  ÿÿÀ  ÿÿÂ  ÿÿÈ  ÿÿì  ÿÿñ  ÿÿó  ÿÿ  ÿÿ0  ÿÿ 0  L  ÿÿN  ÿÿX  ÿÿµ  ÿÿÙ  ÿÿ  ÿÿ@  ÿÿ–  ÿÿÉ  ÿÿä  ÿÿ  ÿÿZ  ÿÿ¤  ÿÿ¿  ÿÿÊ  ÿÿÌ  ÿÿÔ  ÿÿÖ  ÿÿú  ÿÿü  ÿÿ ü    ÿÿ/  ÿÿm  ÿÿµ  ÿÿ    ÿÿX   ÿÿ§!  ÿÿ #  ÿÿt#  ÿÿ¥#  ÿÿÝ#  ÿÿ$  ÿÿ$  ÿÿ$  ÿÿ"$  ÿÿF$  ÿÿK$  ÿÿM$  ÿÿa$  ÿÿ„$  ÿÿ „$  $  ÿÿŸ$  ÿÿ©$  ÿÿ%  ÿÿ*%  ÿÿi%  ÿÿ‘%  ÿÿç%  ÿÿ&  ÿÿ5&  ÿÿ]&  ÿÿ¨&  ÿÿï&  ÿÿ
-'  ÿÿ'  ÿÿ'  ÿÿ'  ÿÿ!'  ÿÿ''  ÿÿK'  ÿÿ K'  P'  ÿÿR'  ÿÿf'  ÿÿŠ'  ÿÿ¤'  ÿÿ¦'  ÿÿ°'  ÿÿÛ'  ÿÿ(  ÿÿU(  ÿÿ`(  ÿÿj(  ÿÿ’(  ÿÿì(  ÿÿ")  ÿÿ2)  ÿÿ=)  ÿÿU)  ÿÿ_)  ÿÿ©)  ÿÿ ©)  å)  ÿÿð)  ÿÿò)  ÿÿú)  ÿÿü)  ÿÿ*  ÿÿ&*  ÿÿ+*  ÿÿ-*  ÿÿI*  ÿÿ^*  ÿÿœ*  ÿÿä*  ÿÿæ*  ÿÿ-  ÿÿ-  ÿÿù/  ÿÿû/  ÿÿ0  ÿÿP0  ÿÿ P0  ˜0  ÿÿÆ0  ÿÿ1  ÿÿD1  ÿÿI1  ÿÿK1  ÿÿQ1  ÿÿu1  ÿÿz1  ÿÿ|1  ÿÿ1  ÿÿ¨1  ÿÿÈ1  ÿÿÊ1  ÿÿÔ1  ÿÿ2  ÿÿU2  ÿÿ}2  ÿÿ¸2  ÿÿÛ2  ÿÿ Û2  ö2  ÿÿ3  ÿÿZ3  ÿÿ“3  ÿÿ®3  ÿÿ¹3  ÿÿ»3  ÿÿÃ3  ÿÿÅ3  ÿÿË3  ÿÿï3  ÿÿô3  ÿÿö3  ÿÿ 4  ÿÿR4  ÿÿT4  ÿÿã4  ÿÿå4  ÿÿù4  ÿÿ5  ÿÿ 5  5  ÿÿ5  ÿÿ5  ÿÿ85  ÿÿ=5  ÿÿ?5  ÿÿI5  ÿÿ›5  ÿÿ5  ÿÿì5  ÿÿî5  ÿÿ6  ÿÿ
-6  ÿÿ6  ÿÿ6  ÿÿ6  ÿÿA6  ÿÿF6  ÿÿH6  ÿÿc6  ÿÿ c6  s6  ÿÿ¥6  ÿÿì6  ÿÿî6  ÿÿ`7  ÿÿ‘7  ÿÿá8  ÿÿ99  ÿÿ¥:  ÿÿ§:  ÿÿÌ:  ÿÿ;  ÿÿV;  ÿÿ;  ÿÿà;  ÿÿ!<  ÿÿ#<  ÿÿh<  ÿÿ‘<  ÿÿÊ<  ÿÿ Ê<  ú<  ÿÿü<  ÿÿ=  ÿÿ&=  ÿÿ+=  ÿÿ-=  ÿÿ7=  ÿÿ‰=  ÿÿ‹=  ÿÿ´=  ÿÿû=  ÿÿý=  ÿÿ>  ÿÿ)>  ÿÿ>>  ÿÿo>  ÿÿ>  ÿÿ’>  ÿÿ^?  ÿÿ`?  ÿÿ `?  @  ÿÿ@  ÿÿ @  ÿÿ§@  ÿÿ©@  ÿÿ½@  ÿÿÈ@  ÿÿÐ@  ÿÿÒ@  ÿÿØ@  ÿÿü@  ÿÿA  ÿÿA  ÿÿA  ÿÿ2A  ÿÿ4A  ÿÿ;A  ÿÿyA  ÿÿÁA  ÿÿYB  ÿÿ YB  ½C  ÿÿ¿C  ÿÿÇE  ÿÿÉE  ÿÿF  ÿÿÉF  ÿÿ’G  ÿÿ”G  ÿÿšG  ÿÿéG  ÿÿ1H  ÿÿ_H  ÿÿžH  ÿÿÝH  ÿÿâH  ÿÿ1I  ÿÿyI  ÿÿ»I  ÿÿúI  ÿÿ9J  ÿÿ 9J  AJ  ÿÿCJ  ÿÿIJ  ÿÿmJ  ÿÿrJ  ÿÿtJ  ÿÿ~J  ÿÿÐJ  ÿÿÒJ  ÿÿrK  ÿÿtK  ÿÿˆK  ÿÿ“K  ÿÿ›K  ÿÿK  ÿÿ£K  ÿÿÇK  ÿÿÌK  ÿÿÎK  ÿÿâK  ÿÿ âK  L  ÿÿL  ÿÿL  ÿÿ)L  ÿÿ†L  ÿÿªL  ÿÿéL  ÿÿM  ÿÿgM  ÿÿšM  ÿÿµM  ÿÿÝM  ÿÿ(N  ÿÿnN  ÿÿ‰N  ÿÿ”N  ÿÿ–N  ÿÿžN  ÿÿ N  ÿÿ¦N  ÿÿ ¦N  ÊN  ÿÿÏN  ÿÿÑN  ÿÿÛN  ÿÿ-O  ÿÿ/O  ÿÿ_O  ÿÿaO  ÿÿuO  ÿÿ€O  ÿÿˆO  ÿÿŠO  ÿÿO  ÿÿ´O  ÿÿ¹O  ÿÿ»O  ÿÿÅO  ÿÿP  ÿÿP  ÿÿQP  ÿÿ QP  SP  ÿÿgP  ÿÿrP  ÿÿzP  ÿÿ|P  ÿÿ‚P  ÿÿ¦P  ÿÿ«P  ÿÿ­P  ÿÿ·P  ÿÿ	Q  ÿÿQ  ÿÿPQ  ÿÿRQ  ÿÿfQ  ÿÿqQ  ÿÿyQ  ÿÿ{Q  ÿÿQ  ÿÿ¥Q  ÿÿ ¥Q  ªQ  ÿÿ¬Q  ÿÿÇQ  ÿÿÛQ  ÿÿÝQ  ÿÿãQ  ÿÿ!R  ÿÿiR  ÿÿËR  ÿÿMS  ÿÿT  ÿÿ!T  ÿÿuT  ÿÿ!U  ÿÿèU  ÿÿêU  ÿÿïU  ÿÿ?V  ÿÿ‡V  ÿÿÉV  ÿÿ ÉV  W  ÿÿGW  ÿÿOW  ÿÿQW  ÿÿWW  ÿÿ{W  ÿÿ€W  ÿÿ‚W  ÿÿ–W  ÿÿ¸W  ÿÿÑW  ÿÿÓW  ÿÿÝW  ÿÿ:X  ÿÿ^X  ÿÿX  ÿÿÅX  ÿÿY  ÿÿNY  ÿÿiY  ÿÿ iY  ‘Y  ÿÿÜY  ÿÿ"Z  ÿÿ=Z  ÿÿHZ  ÿÿJZ  ÿÿRZ  ÿÿTZ  ÿÿZZ  ÿÿ~Z  ÿÿƒZ  ÿÿ…Z  ÿÿ Z  ÿÿµZ  ÿÿêZ  ÿÿ*[  ÿÿd[  ÿÿ²]  ÿÿ`  ÿÿ`  ÿÿ `  	`  ÿÿ-`  ÿÿ2`  ÿÿ4`  ÿÿH`  ÿÿc`  ÿÿ‰`  ÿÿ‹`  ÿÿ•`  ÿÿò`  ÿÿa  ÿÿUa  ÿÿ}a  ÿÿÓa  ÿÿb  ÿÿ!b  ÿÿIb  ÿÿ–b  ÿÿÞb  ÿÿùb  ÿÿ ùb  c  ÿÿc  ÿÿc  ÿÿc  ÿÿc  ÿÿ:c  ÿÿ?c  ÿÿAc  ÿÿXc  ÿÿZc  ÿÿnc  ÿÿŒc  ÿÿ¸c  ÿÿºc  ÿÿÄc  ÿÿ!d  ÿÿEd  ÿÿ„d  ÿÿ¬d  ÿÿe  ÿÿ e  5e  ÿÿPe  ÿÿxe  ÿÿÈe  ÿÿf  ÿÿ.f  ÿÿ9f  ÿÿ;f  ÿÿCf  ÿÿEf  ÿÿKf  ÿÿof  ÿÿtf  ÿÿvf  ÿÿŽf  ÿÿŸf  ÿÿ¡f  ÿÿßf  ÿÿ'g  ÿÿ)g  ÿÿ )g  >g  ÿÿQg  ÿÿˆg  ÿÿ°g  ÿÿÃg  ÿÿÖg  ÿÿàg  ÿÿ0h  ÿÿ:h  ÿÿ›h  ÿÿ°h  ÿÿi  ÿÿi  ÿÿi  ÿÿ3i  ÿÿ>i  ÿÿFi  ÿÿHi  ÿÿNi  ÿÿri  ÿÿ ri  wi  ÿÿyi  ÿÿ˜i  ÿÿ®i  ÿÿ°i  ÿÿ¶i  ÿÿði  ÿÿ8j  ÿÿ:j  ÿÿšj  ÿÿðj  ÿÿkk  ÿÿl  ÿÿl  ÿÿl  ÿÿfl  ÿÿ®l  ÿÿÜl  ÿÿm  ÿÿZm  ÿÿ Zm  \m  ÿÿbm  ÿÿ†m  ÿÿ‹m  ÿÿm  ÿÿ°m  ÿÿÌm  ÿÿÎm  ÿÿÕm  ÿÿn  ÿÿ[n  ÿÿôn  ÿÿ´p  ÿÿ¶p  ÿÿør  ÿÿúr  ÿÿ s  ÿÿ$s  ÿÿ)s  ÿÿ+s  ÿÿ +s  ?s  ÿÿ[s  ÿÿƒs  ÿÿ…s  ÿÿs  ÿÿºs  ÿÿös  ÿÿt  ÿÿt  ÿÿ3t  ÿÿht  ÿÿ‹t  ÿÿ›t  ÿÿ¦t  ÿÿ¾t  ÿÿÈt  ÿÿu  ÿÿ8u  ÿÿCu  ÿÿEu  ÿÿ Eu  Mu  ÿÿOu  ÿÿUu  ÿÿyu  ÿÿ~u  ÿÿ€u  ÿÿŠu  ÿÿÜu  ÿÿÞu  ÿÿv  ÿÿv  ÿÿ0v  ÿÿ;v  ÿÿCv  ÿÿEv  ÿÿKv  ÿÿov  ÿÿtv  ÿÿvv  ÿÿŠv  ÿÿ Šv  §v  ÿÿÑv  ÿÿÓv  ÿÿÝv  ÿÿ:w  ÿÿ^w  ÿÿw  ÿÿÅw  ÿÿx  ÿÿNx  ÿÿix  ÿÿ‘x  ÿÿàx  ÿÿ*y  ÿÿEy  ÿÿPy  ÿÿRy  ÿÿZy  ÿÿ\y  ÿÿby  ÿÿ by  †y  ÿÿ‹y  ÿÿy  ÿÿ¬y  ÿÿÅy  ÿÿz  ÿÿKz  ÿÿMz  ÿÿÝz  ÿÿå{  ÿÿç{  ÿÿ^}  ÿÿ`}  ÿÿ´}  ÿÿù}  ÿÿ4~  ÿÿq~  ÿÿó~  ÿÿõ~  ÿÿú~  ÿÿ ú~  I  ÿÿ‘  ÿÿÄ  ÿÿ€  ÿÿB€  ÿÿD€  ÿÿJ€  ÿÿn€  ÿÿs€  ÿÿu€  ÿÿ€  ÿÿž€  ÿÿ €  ÿÿÞ€  ÿÿ&  ÿÿ(  ÿÿ=  ÿÿP  ÿÿ‡  ÿÿ¯  ÿÿ ¯  Â  ÿÿÕ  ÿÿß  ÿÿ/‚  ÿÿ9‚  ÿÿ–‚  ÿÿ®‚  ÿÿÿ‚  ÿÿƒ  ÿÿƒ  ÿÿ0ƒ  ÿÿ;ƒ  ÿÿCƒ  ÿÿEƒ  ÿÿKƒ  ÿÿoƒ  ÿÿtƒ  ÿÿvƒ  ÿÿŠƒ  ÿÿ§ƒ  ÿÿ §ƒ  Ñƒ  ÿÿÓƒ  ÿÿÝƒ  ÿÿ„  ÿÿP„  ÿÿ™„  ÿÿÚ„  ÿÿ'…  ÿÿB…  ÿÿj…  ÿÿž…  ÿÿ¹…  ÿÿá…  ÿÿ†  ÿÿ4†  ÿÿ?†  ÿÿA†  ÿÿG†  ÿÿk†  ÿÿp†  ÿÿ p†  r†  ÿÿ|†  ÿÿÎ†  ÿÿÐ†  ÿÿ'‡  ÿÿ*‡  ÿÿ,‡  ÿÿ@‡  ÿÿK‡  ÿÿS‡  ÿÿU‡  ÿÿ[‡  ÿÿ‡  ÿÿ„‡  ÿÿ†‡  ÿÿž‡  ÿÿ ‡  ÿÿª‡  ÿÿÒ‡  ÿÿç‡  ÿÿ ç‡  ˆ  ÿÿ*ˆ  ÿÿLˆ  ÿÿvˆ  ÿÿœˆ  ÿÿ«ˆ  ÿÿÓˆ  ÿÿìˆ  ÿÿ‰  ÿÿ‰  ÿÿ‰  ÿÿ‰  ÿÿ‰  ÿÿB‰  ÿÿD‰  ÿÿS‰  ÿÿb‰  ÿÿd‰  ÿÿn‰  ÿÿµ‰  ÿÿ µ‰  Š  ÿÿ)Š  ÿÿmŠ  ÿÿ¡Š  ÿÿðŠ  ÿÿûŠ  ÿÿýŠ  ÿÿ‹  ÿÿG‹  ÿÿ‚‹  ÿÿ–‹  ÿÿ˜‹  ÿÿ¢‹  ÿÿè‹  ÿÿ+Œ  ÿÿnŒ  ÿÿ±Œ  ÿÿôŒ  ÿÿA  ÿÿt  ÿÿ t    ÿÿ  ÿÿ  ÿÿŸ  ÿÿ®  ÿÿ°  ÿÿÄ  ÿÿë  ÿÿü  ÿÿþ  ÿÿ0Ž  ÿÿFŽ  ÿÿŽ  ÿÿ Ž  ÿÿ¨Ž  ÿÿ²Ž  ÿÿáŽ  ÿÿ  ÿÿ'  ÿÿq  ÿÿ q  Œ  ÿÿ¾  ÿÿÀ  ÿÿÏ  ÿÿò  ÿÿ  ÿÿ%  ÿÿY  ÿÿ[  ÿÿ™  ÿÿà  ÿÿâ  ÿÿ ‘  ÿÿg‘  ÿÿi‘  ÿÿŸ‘  ÿÿü‘  ÿÿ’  ÿÿc’  ÿÿ ’  ÿÿ  ’  ¦’  ÿÿ¨’  ÿÿê’  ÿÿ4“  ÿÿ€“  ÿÿÈ“  ÿÿ ”  ÿÿ”  ÿÿD”  ÿÿŽ”  ÿÿÚ”  ÿÿ"•  ÿÿZ•  ÿÿ\•  ÿÿb•  ÿÿ±•  ÿÿù•  ÿÿ'–  ÿÿf–  ÿÿ¥–  ÿÿ ¥–  ª–  ÿÿ¬–  ÿÿû–  ÿÿC—  ÿÿ…—  ÿÿÄ—  ÿÿ˜  ÿÿ˜  ÿÿ
-˜  ÿÿQ˜  ÿÿS˜  ÿÿ§˜  ÿÿ©˜  ÿÿ±˜  ÿÿ·˜  ÿÿÛ˜  ÿÿà˜  ÿÿâ˜  ÿÿ™  ÿÿ™  ÿÿ ™  ™  ÿÿ+™  ÿÿ:™  ÿÿ<™  ÿÿ`™  ÿÿo™  ÿÿq™  ÿÿz™  ÿÿƒ™  ÿÿ…™  ÿÿS˜  ÿÿ§˜  ÿÿ©˜  ÿÿ±˜  ÿÿ·˜  ÿÿÛ˜  ÿÿà˜  ÿÿâ˜  ÿÿ™  ÿÿ™  ÿÿ 
-   Arial    ÿÿ @  ÿÿ§@  ÿÿ©@  ÿÿ½@  ÿÿÈ@  ÿÿÐ@  ÿÿÒ@  ÿÿØ@  ÿÿü@  ÿÿA  ÿÿA  ÿÿA  ÿÿ2A  ÿÿ4A  ÿÿ;A  ÿÿyA  ÿÿÁA  ÿÿYB  ÿÿ </ce€   ƒ™  w  k ¯)   _i7q*`*`h   j  d`¤š¯ p 7n˜p`jqh p`ð  p`²z`x`p`j jð n`³_ip`²7_iö  èèî`  j¿i, 2 €   —   ÿÿŸ   ÿÿ¨   ÿÿ  ÿÿh  ÿÿ»  ÿÿ  ÿÿo  ÿÿ­  ÿÿ  ÿÿ{  ÿÿý  ÿÿ?  ÿÿ   ÿÿø  ÿÿu  ÿÿ½  ÿÿ  ÿÿ-  ÿÿ†  ÿÿ †  ä  ÿÿ  ÿÿ6  ÿÿo  ÿÿž  ÿÿ   ÿÿ¨  ÿÿð  ÿÿò  ÿÿ  ÿÿ>
+</font></p>
+</body>
+</html>
