Removed jibberish from end of file

--- a/namn-001.htm
+++ b/namn-001.htm
@@ -212,19 +212,6 @@ document</i></a>]
 
 <p><br>
 
-</p></font></p></body>
+</p></font></p>
+</body>
 </html>
-
-<!-- /\ end html  -->
-&nbsp;&nbsp; There are 6,622 meЂ   б'  w 4.·D'`7e$T&`Meg$Tћ П Ђё—D у:`›   2™,™Р™2™0g‚“pцЊ2hТ”·Db`ЃLvhђ4
-gL^ vhzhўirh·Ds`а	gL 4   ·DЏ`Б§G ,   Ђ   —   яяџ   яяЎ   яя©   яяц   яя9  яяk  яя¤  яяС  яя  яя#  яя%  яя-  яяu  яяw  яя«  яяУ  яяж  яящ  яя&  яя &  (  яяL  яяa  яяu  яяw  яя¤  яя­  яяЇ  яяа  яя  яя•  яяµ  яя·  яяН  яяП  яяС  яя4  яя–  яя  яя  яя   f  яяё  яя  яя  яя’  яяг  яя4  яяЋ  яяђ  яяЁ  яяс  яя	  яя
-	  яя[	  яя™	  яяж	  яя3
-  яя€
-  яяЭ
-  яя2  яя 2  Џ  яяЬ  яя1  яя†  яяФ  яяЦ  яя,
-  яя‰
-  яяж
-  яяK  яяћ  яяЙ  яяд  яя8  яяA  яяG  яяI  яяv  яяЅ  яяк  яя к  м  яят  яяф  яяю  яя<  яяZ  яяp  яя{  яя}  яяЛ  яяН  яял  яя№  яя»  яя‚  яя„  яя‹  яяЌ  яяє  яяј  яя ј  П  яяС  яяЪ  яя  яя	  яя  яя  яя4  яяK  яяM  яяz  яя|  яя‹  яяЌ  яяШ  яя  яяM  яяa  яяq  яяs  яя s  Д  яя  яяG  яяa  яяq  яяs  яяё  яяп  яя7  яяA  яяC  яяp  яяr  яяЏ  яяш  яя7  яяЁ  яяц  яя]  яяc  яя c  e  яя’  яя”  яяВ  яя:   яяL   яяµ   яяМ   яяО   яяд   яяж   яяи   яя!  яя!  яяJ!  яяz!  яяЄ!  яяЪ!  яяЬ!  яя"  яя "  ^"  яя`"  яяњ"  яяШ"  яяЪ"  яя#  яяO#  яяQ#  яя‹#  яяД#  яяЖ#  яяу#  яях#  яяю#  яя$  яя$  яя$  яя?$  яяI$  яя·$  яя ·$  В$  яяп$  яяс$  яя%%  яя8%  яяK%  яя^%  яяq%  яяs%  яя|%  яя…%  яяЋ%  яя—%  яя %  яя©%  яяІ%  яя»%  яяД%  яяН%  яяЦ%  яя Ц%  Я%  яяи%  яяс%  яяъ%  яя&  яя&  яя&  яя&  яя'&  яя0&  яя2&  яя_&  яяi&  яя¶&  яяь&  яя'  яяi'  яяq'  яя|'  яя©'  яя ©'  «'  яяґ'  яя¶'  яяї'  яяИ'  яяК'  яяб'  яяг'  яя'&  яя0&  яя2&  яя_&  яяi&  яя¶&  яяь&  яя'  яяi'  яяq'  яя|'  яя©'  яя    Arial   sp;&nbsp; 34 boys were named ANDREAS and 32 girls were named EMMA in 2003.
-<br>
-
-<center><hr width="100%"></center>
