Removed jibberish from end of file

--- a/grondame.htm
+++ b/grondame.htm
@@ -43,11 +43,11 @@
 
 <p>Folkeforteljingar... <i>[Folk stories]</i>
 
-<p><b> - Spøkelsen av "<u>DEN <font color="#00FF00">GRØNNE</font> DAME</u>"og korleis ho kom til Trandal frå Sæbø...
-<br> &nbsp;&nbsp;  - Andletet av "Trollgjøttemannen" vart skapt i fjellet av pila skoten av Heilag-Olav..
-<br>&nbsp;&nbsp;  &nbsp;&nbsp;  - "Hjelp!.. Det er ei mus i ølet mitt!"..
-<br>&nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp; ..og andre forteljingar frå Trandal området. </b>
-<br><i> - The ghost of "<u>THE <font color="#00FF00">GREEN</font> LADY</u>" and how she came to Trandal from Sæbø...
+<p><b> - Spï¿½kelsen av "<u>DEN <font color="#00FF00">GRï¿½NNE</font> DAME</u>"og korleis ho kom til Trandal frï¿½ Sï¿½bï¿½...
+<br> &nbsp;&nbsp;  - Andletet av "Trollgjï¿½ttemannen" vart skapt i fjellet av pila skoten av Heilag-Olav..
+<br>&nbsp;&nbsp;  &nbsp;&nbsp;  - "Hjelp!.. Det er ei mus i ï¿½let mitt!"..
+<br>&nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp; ..og andre forteljingar frï¿½ Trandal omrï¿½det. </b>
+<br><i> - The ghost of "<u>THE <font color="#00FF00">GREEN</font> LADY</u>" and how she came to Trandal from Sï¿½bï¿½...
 <br> &nbsp;&nbsp;  - A troll's face was formed into a mountain grotto by a (Nes?) arrow shot by St. Olav..
 <br>&nbsp;&nbsp;  &nbsp;&nbsp;  - "Help!.. There's a mouse in my beer!"..
 <br>&nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  - Why there are frogs, snakes, etc. on Leknes, but NOT on Trandal...
@@ -67,7 +67,7 @@
 </p>
 
 <center>
-<img src="___1____.jpg" alt="jpg FOTO nr. 1. av ____ om _____, er 203 bilete-eininga høg og 256 breid - - -  jpg PHOTO No.1. of ___ about _____, is 203 pixels (picture-elements) high and 256 pixels wide." hspace="10" vspace="10" border="0" height="203" width="356"></center>
+<img src="___1____.jpg" alt="jpg FOTO nr. 1. av ____ om _____, er 203 bilete-eininga hï¿½g og 256 breid - - -  jpg PHOTO No.1. of ___ about _____, is 203 pixels (picture-elements) high and 256 pixels wide." hspace="10" vspace="10" border="0" height="203" width="356"></center>
 
 <center>
 <font color="#FF0000" font="" size="-1">
@@ -76,12 +76,12 @@
 </font></center></font>
 
 
-<p><b>Eller kanskje paragrafen om foto nr.1 burde være her ?... &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  ...osv.</b>
+<p><b>Eller kanskje paragrafen om foto nr.1 burde vï¿½re her ?... &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  ...osv.</b>
 <br>Or maybe the paragraph about photo No.1 should be here ?... &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ...etc.
 </p>
 
 <center>
-<img src="____2__.jpg" alt="jpg FOTO nr. 2. av ____ på _____ som er 378 høg og 264 breid" hspace="10" vspace="10" border="5" height="378" width="264"></center>
+<img src="____2__.jpg" alt="jpg FOTO nr. 2. av ____ pï¿½ _____ som er 378 hï¿½g og 264 breid" hspace="10" vspace="10" border="5" height="378" width="264"></center>
 
 <center>
 <font color="#FF0000" font="" size="-1">
@@ -95,7 +95,7 @@
 </p>
 
 <center>
-<img src="_____3__.jpg" alt="jpg FOTO nr. 3. av ____ på _____ som er 203 høg og 364 breid" hspace="10" vspace="10" border="0" height="203" width="364"></center>
+<img src="_____3__.jpg" alt="jpg FOTO nr. 3. av ____ pï¿½ _____ som er 203 hï¿½g og 364 breid" hspace="10" vspace="10" border="0" height="203" width="364"></center>
 
 <center>
 <font color="#FF0000" font="" size="-1">
@@ -116,7 +116,7 @@
 <p><br>
 
 <center><hr width="50%"><center>
-<p><b>Bruk FØRRE knappen din...eller <a href="index-1.htm#topp">HER til TRANDAL </a> hovudsida.</b>
+<p><b>Bruk Fï¿½RRE knappen din...eller <a href="index-1.htm#topp">HER til TRANDAL </a> hovudsida.</b>
 <br><i>Use your BACK button.. or <u>HERE to the TRANDAL </u> Main Index Page</i></p>
 <center><hr width="50%"></center></center>
 
@@ -144,22 +144,3 @@ document</i></a>]
 <center><hr width="100%"></center>
 </p></a></p></body>
 </body></html>
-
-<!-- /\ end html  -->
-av pila skoten av Heilag-Olav..
-<br>&nbsp;&nbsp;  &nbsp;&nbsp;  - "Hje€9w`òdg`_`_&`Meg`_ Ç &Qó:`› nŸhŸˆŸnŸ0g‚“pöŒ2h2›ïRb`ïJÒh44
-wHÒhêi–iÖhïRs`à	wHØïR`ÁH,€—ÿÿŸÿÿ¡ÿÿ©ÿÿöÿÿ9ÿÿkÿÿ¤ÿÿñÿÿ'ÿÿ)ÿÿFÿÿOÿÿQÿÿYÿÿ¡ÿÿ£ÿÿÚÿÿÿÿ"ÿÿ"5ÿÿeÿÿgÿÿ‹ÿÿ ÿÿ¶ÿÿ¸ÿÿÁÿÿÃÿÿôÿÿ=ÿÿcÿÿ—ÿÿ®ÿÿÂÿÿÄÿÿÿÿEÿÿƒÿÿÁÿÿÁÿÿÿ=ÿÿnÿÿsÿÿzÿÿ˜ÿÿÅÿÿÇÿÿöÿÿøÿÿoÿÿÚÿÿ%ÿÿ…ÿÿûÿÿg	ÿÿ²	ÿÿ&
-ÿÿ‘
-ÿÿ“
-ÿÿ“
-æ
-ÿÿè
-ÿÿÿÿÿÿ-ÿÿ/ÿÿ‚ÿÿğÿÿöÿÿøÿÿRÿÿ­ÿÿ³ÿÿµÿÿ¿ÿÿ
-ÿÿ¬
-ÿÿÌ
-ÿÿÎ
-ÿÿØ
-ÿÿØ
-ÿ
-ÿÿ(ÿÿTÿÿdÿÿoÿÿqÿÿäÿÿVÿÿ\ÿÿ^ÿÿhÿÿÄÿÿâÿÿÿÿÿÿÿÿ5ÿÿ—ÿÿğÿÿÿÿÿÿ
-ÿÿ.ÿÿhÿÿnÿÿpÿÿzÿÿ×ÿÿõÿÿÿÿÿÿ!ÿÿHÿÿsÿÿ¦ÿÿ¶ÿÿÁÿÿÃÿÿëÿÿ.ÿÿ.4ÿÿ6ÿÿÅÿÿDÿÿJÿÿLÿÿUÿÿ^ÿÿ`ÿÿ‚ÿÿåÿÿ;ÿÿgÿÿiÿÿÿÿ°ÿÿÃÿÿÖÿÿéÿÿëÿÿëôÿÿıÿÿÿÿÿÿÿÿ_ÿÿ¥ÿÿ¸ÿÿÿÿ‹ÿÿ“ÿÿÿÿËÿÿÍÿÿÖÿÿßÿÿáÿÿÿÿÿÿ ÿÿ "ÿÿ9ÿÿ;ÿÿÿÿÿÿ_ÿÿ¥ÿÿ¸ÿÿÿÿ‹ÿÿ“ÿÿÿÿËÿÿÍÿÿÖÿÿßÿÿáÿÿÿÿÿÿ ÿÿ Arialeininga høg og 256 breid - - -  jpg PHOTO No.1. of ___ about _____, is 203 pixels (picture-elements) high and 256 p
